x overflow fixed

--- a/app/globals.css
+++ b/app/globals.css
@@ -65,6 +65,7 @@
   }
   body {
     @apply bg-background text-foreground;
+    @apply overflow-x-hidden;
   }
 }
 
